# sparrow

./: .gitignore  qft_16.qasm  vqe_16.qasm  vqe_20.qasm  vqe_24.qasm
sparrow-core/: Cargo.toml
sparrow-core/benchmarks/: cnot_latency.csv  fidelity_frontier.csv  memory_curve.csv
sparrow-core/examples/: cnot_latency.rs  fidelity_frontier.rs  memory_curve.rs
sparrow-core/src/: lib.rs
sparrow-ml/: Cargo.toml
sparrow-ml/assets/: splash_model.json
sparrow-ml/benchmarks/: entanglement_growth.csv  latency_histogram.csv  precision_recall.csv
sparrow-ml/config/: train_model.toml
sparrow-ml/examples/: entanglement_growth.rs  latency_hist.rs  precision_recall.rs  train_model.rs
sparrow-ml/src/: dataset.rs  features.rs  gate.rs  lib.rs  logistic.rs  predictor.rs
sparrow-sim/: Cargo.toml
sparrow-sim/benchmarks/: README.md  run_all_vqe_bench.sh  run_vqe_bench.sh
sparrow-sim/src/: main.rs  orchestrator.rs  parser.rs  qasm.pest
sparrow-sim/tools/: generate_qft_qasm.py  generate_vqe_qasm.py
