[package]
name = "sparrow-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
sparrow-core = { path = "../sparrow-core" }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
once_cell = "1.19"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
time = { version = "0.3", features = ["formatting"] }
