[package]
name = "sparrow-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
meval = "0.2"
pest = { version = "2.7", default-features = false, features = ["std"] }
pest_derive = "2.7"
sparrow-core = { path = "../sparrow-core" }
sparrow-ml = { path = "../sparrow-ml" }
thiserror = "1.0"
